# beyond-the-pale-blue-dot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: keep-alive.yml  populate-asteroids.yml  populate-exoplanets.yml
alembic/: env.py
alembic/versions/: e5838d1ce582_initial.py
app/: config.py  exceptions.py  logging.py
app/api/: dependencies.py  main.py
app/api/routes/: asteroid.py  impact_event.py
app/clients/: nasa_neo_ws_client.py  nasa_neows_client.py  nasa_sbdb_client.py  nasa_sentry_client.py
app/models/: asteroid.py  impact_event.py
app/repositories/: asteroid.py  impact_event.py
app/schemas/: asteroid.py  impact_event.py
app/services/: asteroid.py  asteroid_service.py  impact_event.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 125d235888c0_add_exoplanets_table.py  835dcb05d3ce_add_index_on_impact_events_asteroid_id.py  a1b2c3d4e5f6_remove_visual_data_from_asteroids.py  b7c8d9e0f1a2_make_exoplanet_columns_nullable.py  c3d4e5f6a7b8_add_discovery_pubdate_to_exoplanets.py  e5838d1ce582_initial.py  f1a2b3c4d5e6_add_visual_data_to_asteroids.py
backend/app/: config.py  exceptions.py  logging.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routes/: asteroid.py  exoplanet.py  impact_event.py
backend/app/models/: asteroid.py  exoplanet.py  impact_event.py
backend/app/repositories/: asteroid.py  exoplanet.py  impact_event.py
backend/app/schemas/: asteroid.py  exoplanet.py  impact_event.py
backend/app/services/: asteroid.py  exoplanet.py  impact_event.py
backend/script/: populate_asteroids_database.py  populate_exoplanets_database.py
backend/tests/: conftest.py  test_asteroid_service.py  test_exoplanet_service.py  test_impact_event_service.py  test_repositories.py  test_routes.py
frontend/: .env.production.example  .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts  vitest.d.ts
frontend/src/app/: tracker.store.ts
frontend/src/app/layout/: AppShell.tsx  Toolbar.tsx  TrackerSwitch.tsx
frontend/src/features/asteroid-tables/: AsteroidSearch.tsx  AsteroidTable.tsx  AsteroidTablesPanel.tsx  category.store.test.ts  category.store.ts  tabs.config.ts
frontend/src/shared/: date.ts
frontend/src/shared/api/: asteroid.ts  (+6 more)
frontend/src/styles/: layout.css  theme.css
script/: populate_asteroids_database.py
(+39 files in other folders)
