[tool.poetry]
name = "the-end-of-the-world"
version = "0.1.0"
description = "FastAPI application to demonstrate the end of the world."
authors = ["elbeto87"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
httpx = "^0.28"
pydantic-settings = "^2.7"
sqlalchemy = "^2.0.49"
psycopg2-binary = "^2.9.12"
alembic = "^1.18.4"
loguru = "^0.7.3"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
httpx = "^0.28"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120