[tool.poetry]
name = "beyond-the-pale-blue-dot"
version = "0.1.0"
description = "FastAPI application to demonstrate Beyond the Pale Blue Dot."
authors = ["elbeto87"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
httpx = "^0.28"
pydantic-settings = "^2.7"
sqlalchemy = "^2.0.49"
psycopg2-binary = "^2.9.12"
alembic = "^1.18.4"
loguru = "^0.7.3"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
httpx = "^0.28"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
exclude = ["alembic/**", "tests/**"]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (PEP 8)
    "W",    # pycodestyle warnings (PEP 8)
    "F",    # pyflakes (imports/vars sin usar, etc.)
    "I",    # isort (orden de imports)
    "N",    # pep8-naming (nombres PEP 8)
    "UP",   # pyupgrade (sintaxis moderna de Python)
    "B",    # flake8-bugbear (bugs comunes)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking (mueve imports a TYPE_CHECKING)
    "RUF",  # reglas propias de Ruff
]
ignore = [
    "B008",  # permitir Depends() como valor por defecto (patrón de FastAPI)
    "N818",  # excepciones custom usan sufijo ...Exception (convención del proyecto)
]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E501", "N999"]  # migraciones autogeneradas

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
